--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,3 +1,24 @@
-<h1>To Do List</h1>
-<h3><a href='/categories'>View categories</a></h3>
-<h3><a href='/categories/new'>Add a new category</a></h3>
+@using World.Models;
+<h1>Cities</h1>
+
+<form action="/sortascending" method="post">
+  <button type="submit">Sort ascending</button>
+</form>
+
+<form action="/sortdescending" method="post">
+  <button type="submit">Sort descending</button>
+</form>
+<ul>
+
+  @foreach (City city in Model)
+{
+
+
+  <li>@city.GetName() </li>
+<ul>
+<li> @city.GetPopulation()</li>
+</ul>
+
+
+
+}
